# schift-py

./: README.md  bench_report.html  pyproject.toml
.github/workflows/: publish.yml
docs/: ADAPTER_INTERFACE_CONTRACT.md  CLIENT_AUTH_CONTRACT.md  DB_CONTRACT.md  DB_RECORD_SCHEMA.md  EMBED_CONTRACT.md  MIGRATE_BENCH_CONTRACT.md  MIGRATE_FIT_CONTRACT.md  MIGRATE_RUN_CONTRACT.md  MODEL_CATALOG_CONTRACT.md  ROUTING_DECISION_SCHEMA.md  ROUTING_EVENTS_CONTRACT.md  ROUTING_POLICY_CONTRACT.md  SDK_FUNCTION_INVENTORY.md  SDK_MODULE_BOUNDARIES.md  SEARCH_CONTRACT.md  SEARCH_QUERY_SCHEMA.md  USAGE_CONTRACT.md
examples/: openai_compat_demo.py
schift/: __init__.py  _http.py  _migrate_module.py  aggregate.py  artifacts.py  bench.py  benchmark_suites.py  buckets.py  catalog.py  chat.py  client.py  completions.py  db.py  decision_review.py  drift.py  embed.py  jobs.py  migrate.py  openai_compat.py  projection.py  providers.py  query.py  rag.py  report.py  rerank.py  routing.py  schift_client.py  search.py  tasks.py  tools.py  tracker.py  usage.py  workflows.py
schift/adapters/: __init__.py  base.py  chroma.py  elasticsearch.py  file.py  milvus.py  mongodb.py  pgvector.py  pinecone.py  qdrant.py  redis.py  registry.py  weaviate.py
tests/: test_chat.py  test_decision_review.py  test_migrate_module.py  test_providers.py  test_query.py  test_rag.py  test_tracker.py
